yamls/deployment.yaml
# deployment.yaml
apiVersion: "v1"
kind: "Deployment"
metadata:
  name: "flowise"
  labels:
    app: "flowise"
spec:
  selector:
    matchLabels:
      app: "flowise"
  replicas: 1
  template:
    metadata:
      labels:
        app: "flowise"
    spec:
      containers:
      - name: "flowise"
        image: "gcr.io/langchainspace/flowise:dev"
        imagePullPolicy: "Always"
        resources: 
          requests:
            cpu: 1
            memory: "
            1Gi"
