yamls/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowise-ingress
  annotations:
    networking.gke.io/managed-certificates: example-certificate
spec:
  rules:
  - host: dashboard.langchain.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flowise-service
            port:
              number: 80
